# eps-dynamodb-poc

./: .gitignore  .pre-commit-config.yaml  .tool-versions  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/scripts/: delete_stacks.sh  deploy_code.sh
.github/workflows/: ci.yml  combine_dependabot_prs.yml  delete_old_cloudformation_stacks.yml  dependabot_auto_approve_and_merge.yml  deploy_code.yml  package_and_upload_code.yml  pr_link_ticket.yml  pr_title_check.yml  pull_request.yml  quality_checks.yml  release.yml
SAMtemplates/: main_template.yaml
SAMtemplates/tables/: dynamodb_resources.yaml  main.yaml
