[project]
python = "^3.12"

[tool.poetry]
name = "eps-dynamodb-poc"
version = "0.0.1-alpha"
description = "EPS DynamoDB Proof of Concept"
license = "MIT"
authors = [
    "Matthew Popat <matthew.popat1@nhs.net>",
    "Anthony Brown <anthony.brown8@nhs.net>",
    "Jolo Das <jolo.das@nhs.net>",
    "Azhar Nisar <azhar.nisar@nhs.net>",
    "Phil Gee <phil.gee@nhs.net>"
]
readme = "README.md"
repository = "https://github.com/NHSDigital/eps-dynamodb-poc"
package-mode = false

[tool.poetry.dependencies]
boto3 = "^1.35.24"
python = "^3.12"
pyyaml = "^6.0"

[tool.poetry.scripts]

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
cfn-lint = "^1.14.2"
flake8 = "^7.1.1"
pip-licenses = "^5.0.0"
pre-commit = "^3.8.0"
pytest = "^8.3.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
